<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status" />
    
    <Button
        android:id="@+id/discover_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/discovery" />
    
    <Button 
        android:id="@+id/server_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/server" />
    
    <EditText
        android:id="@+id/remote_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Remote address" />
    
    <Button 
        android:id="@+id/client_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/client" />
    
    <EditText
        android:id="@+id/prefix_address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Prefix" />
    
    <Button 
        android:id="@+id/worker_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/worker" />
    
    <Button 
        android:id="@+id/service_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/service" />
    
</LinearLayout>
